# graph-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: RESOURCES.md  graph.db
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  vite-env.d.ts
frontend/src/components/: DetailPanel.tsx  Footer.tsx  GraphViewer.tsx  Header.tsx  LearningPath.tsx  TopicNode.tsx  ZoomSlider.tsx
frontend/src/components/edit/: AutocompleteInput.css  AutocompleteInput.tsx  ConfirmDialog.css  ConfirmDialog.tsx  CreateCourseModal.tsx  CreateEdgeModal.tsx  CreateModal.css  CreateTopicModal.tsx  EditModeToggle.css  EditModeToggle.tsx  Notification.css  Notification.tsx  UnsavedBanner.css  UnsavedBanner.tsx  index.ts
frontend/src/components/graph-selector/: CreateGraphModal.css  CreateGraphModal.tsx  GraphSelector.css  GraphSelector.tsx  index.ts
frontend/src/components/table/: DataTable.css  (+10 more)
frontend/src/contexts/: EditContext.tsx
frontend/src/hooks/: useChangeTracking.ts  useGraphData.ts  useGraphList.ts
frontend/src/utils/: graphUtils.ts
scraper/: __init__.py  content_scraper.py  database.py  graph_scraper.py  main.py  models.py  pyproject.toml  query_db.py  server.py
server/: .env  package-lock.json  package.json  pyproject.toml  tsconfig.json
server/data/: knowledge_graphs.db
server/src/: index.ts  main.py  models.py
server/src/db/: factory.py  types.py
server/src/db/adapters/: sqlite.py
server/src/routes/: api.ts  graphs.py
server/tests/: conftest.py  test_graphs.py
