[project]
name = "graph-parser"
version = "0.1.0"
description = "Scraper and parser for JM knowledge graph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
scrape = "scraper.main:main"
serve = "scraper.server:main"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
